Add feature VES fileReady periodic
Signed-off-by: Kacper Witkowski <kacper.witkowski@tietoevry.com>

--- a/ntsimulator/.env
+++ b/ntsimulator/.env
@@ -1,4 +1,4 @@
-DOCKER_REPO=o-ran-sc/
+DOCKER_REPO=localhost:5000/
 NTS_MANAGER_PORT=8300
 NTS_BUILD_VERSION=1.8.1
 
@@ -13,7 +13,7 @@ NTS_HOST_TRANSFER_FTP_BASE_PORT=2000
 NTS_HOST_TRANSFER_SFTP_BASE_PORT=2000
 
 NTS_NF_MOUNT_POINT_ADDRESSING_METHOD=host-mapping
-NTS_NF_STANDALONE_START_FEATURES="datastore-populate ves-heartbeat ves-file-ready ves-pnf-registration web-cut-through netconf-call-home"
+NTS_NF_STANDALONE_START_FEATURES="datastore-populate ves-heartbeat ves-file-ready ves-file-ready-periodic ves-pnf-registration web-cut-through netconf-call-home"
 
 SDN_CONTROLLER_PROTOCOL=http
 SDN_CONTROLLER_IP=172.40.0.21
