Subscribe to NETCONF server, react on cell administrative-state changes

--- a/ntsimulator/nts-ng-docker-image-build-ubuntu.yaml
+++ b/ntsimulator/nts-ng-docker-image-build-ubuntu.yaml
@@ -75,6 +75,7 @@ services:
   ###################################################
   nts-ng-o-ran-du:
     image: ${DOCKER_REPO}nts-ng-o-ran-du:${NTS_BUILD_VERSION}
+    env_file: .env
     build:
       context: ./deploy/o-ran-du
       labels:
