--- a/ntsimulator/.env
+++ b/ntsimulator/.env
@@ -23,10 +23,11 @@ SDN_CONTROLLER_CALLHOME_PORT=6666
 SDN_CONTROLLER_USERNAME=admin
 SDN_CONTROLLER_PASSWORD=admin
 
+# These values are overwritten in DU pod yaml
 VES_COMMON_HEADER_VERSION=7.2.1
-VES_ENDPOINT_PROTOCOL=https
-VES_ENDPOINT_IP=172.40.0.90
-VES_ENDPOINT_PORT=8443
+VES_ENDPOINT_PROTOCOL=http
+VES_ENDPOINT_IP=ves-collector.nonrtric
+VES_ENDPOINT_PORT=8080
 VES_ENDPOINT_AUTH_METHOD=no-auth
 VES_ENDPOINT_USERNAME=sample1
 VES_ENDPOINT_PASSWORD=sample1
